--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,5 +6,6 @@
 @import "_global.scss";              // Base styling & custom mixins
 @import "components/_navs";        // Navbar
 @import "components/_head";     // Header — home
+@import "components/_entry";     // Header — home
 @import "components/_sharetools";    // Share Tools
 @import "components/_artbox";    // Share Tools
