So many things...

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,10 +2,14 @@
 // Bootstrap
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 
-// // Roots
-@import "_global.scss";              // Base styling & custom mixins
-@import "components/_navs";        // Navbar
-@import "components/_head";     // Header — home
-@import "components/_entry";     // Header — home
-@import "components/_sharetools";    // Share Tools
-@import "components/_artbox";    // Share Tools
+// Site files
+@import "_global.scss";           // Base styling & custom mixins
+@import "components/_navs";       // Navbar
+@import "components/_head";       // Header — home
+@import "components/_entry";      // Header — home
+@import "components/_sharetools"; // Share Tools
+@import "components/_artbox";     // Share Tools
+@import "components/_svg";        // SVG
+
+// Sound Cloud
+@import "sc/sc-player-minimal";   // Share Tools
