--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -6,6 +6,7 @@
 
 #composer_box{}
 .composer_block{
+  margin-bottom: 10px;
   label,
   input,
   small {
@@ -42,66 +43,12 @@
   #link_out{
     width:15px;
   }
+  .group{
+    width:48%;
+    display: inline-block;
+  }
+  .group:last-child{
+    float: right;
+  }
 }
 
-#content_blocks{
-  ul{
-    margin:7px 0;
-    padding: 18px;
-    width: 45%;
-    float: left;
-    background: #EAF8F6;
-    li{
-      margin:0 0 3px 0;
-      padding: 10px 13px 12px 13px;
-      font-size: 13px;
-      line-height: 19px;
-      color:#555;
-      min-height: 48px;
-      background: #fff;
-      border-bottom: 2px #ddd solid;
-      h6{
-        margin:0 0 5px 0;
-        font-size: 11px;
-        line-height: 13px;
-        text-transform: uppercase;
-        font-weight: normal;
-      }
-      h5{
-        margin:0;
-        font-size: 13px;
-        line-height: 17px;
-      }
-      img{
-        margin-left: 7px;
-        float: right;
-      }
-      .edit_post{
-        text-decoration: none;
-        font-size: 12px;
-        font-style: italic;
-      }
-    }
-    .heading{
-      margin: 0 0 15px 0;
-      font-size: 16px;
-    }
-  }
-  #collection-list{
-    float:right;
-    li{
-    }
-    li.helper{
-      margin:0;
-      padding: 0;
-      text-align: center;
-      border: none;
-      background: none;
-      min-height: 0;
-      font-size: 16px;
-      line-height: 18px;
-      font-weight: 800;
-      color:#777;
-    }
-  }
-}
