--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@
 @import "components/_navs";       // Navbar
 @import "components/_head";       // Header — home
 @import "components/_entry";      // Header — home
+@import "components/_album";      // Header — home
 @import "components/_sharetools"; // Share Tools
 @import "components/_artbox";     // Share Tools
 @import "components/_svg";        // SVG
