--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6043,6 +6043,27 @@ section {
   font-size: 21px;
   line-height: 28px; }
 
+.album h1.title {
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 49px; }
+.album .album_release_year {
+  font-family: "aktiv-grotesk", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 16px; }
+.album .album_summary {
+  margin: 15px 0;
+  font-family: "aktiv-grotesk", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 21px;
+  line-height: 28px; }
+.album .album_notes {
+  margin: 15px 0;
+  font-family: "aktiv-grotesk", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 21px; }
+
 .sup-share-tools {
   margin: 0; }
   .sup-share-tools .btn-share {
