--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5896,6 +5896,12 @@ section {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff9cf', endColorstr='#f7f7f7', GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */ }
 
+.home #page-overlay {
+  width: 100%;
+  height: 1000px;
+  position: absolute;
+  background-image: url("../img/ac.png"); }
+
 .highlight {
   background: yellow; }
 
