--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -126,7 +126,12 @@ section{
   /* IE6-9 fallback on horizontal gradient */
   
 }
-
+.home #page-overlay{
+  width: 100%;
+  height:1000px;
+  position: absolute;
+  background-image: url('../img/ac.png');
+}
 
 
 .highlight{
@@ -137,4 +142,5 @@ section{
 #main{
   // padding:30px 0 50px 0;
 }
+
 
