--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -15,8 +15,8 @@ $break-md: "screen and (min-width: 992px)";
 $break-lg: "screen and (min-width: 1200px)";
 
 // Type
-// $sans: 'Lato', Helvetica, Arial, sans-serif;
-$sans: "aktiv-grotesk", Helvetica, Arial, sans-serif;
+$sans: 'Lato', Helvetica, Arial, sans-serif;
+// $sans: "aktiv-grotesk", Helvetica, Arial, sans-serif;
 // $serif: 'Alegreya', serif;
 // $serif: "leitura-news", serif;
 // $serif:  "Times New Roman", Times, serif;
