--- a/assets/scss/components/_album.scss
+++ b/assets/scss/components/_album.scss
@@ -1,5 +1,4 @@
 .album{
-
   h1.title{
     font-size: 36px;
     font-weight: 300;
@@ -26,5 +25,64 @@
     font-weight: 300;
     font-size: 16px;
     line-height: 21px;
+  }
+}
+
+
+#album_list{
+  padding: 30px 0;
+  .album_feature{
+    h4{
+      margin: 0;
+      font-family: $sans;
+      font-weight: 100;
+      font-size: 18px;
+      line-height: 22px;
+      text-transform: uppercase;
+    }
+    h3{
+      font-weight: normal;
+      font-weight: 100;
+      font-size: 18px;
+      line-height: 22px;
+    }
+    .album_summary{
+      font-family: $sans;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 21px;
+    }
+    .more{
+      margin: 15px 0;
+      font-style: italic;
+      font-family: $sans;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 21px;
+    }
+  }
+  .album_covers{
+    width:900px;
+    left: -300px;
+    position: relative;
+    .cover{
+      display: inline-block;
+      position: relative;
+    }
+    .cover:nth-child(1) {
+      right: -300px;
+      z-index: 10;
+    }
+    .cover:nth-child(2) {
+      right: -200px;
+      z-index: 9;
+    }
+    .cover:nth-child(3) {
+      right: -100px;
+      z-index: 8;
+    }
+    .cover:nth-child(4) {
+      z-index: 7;
+    }
   }
 }
