--- a/assets/scss/components/_navs.scss
+++ b/assets/scss/components/_navs.scss
@@ -25,38 +25,44 @@
   
 }
 
-#stream-nav {
-  margin-bottom: 20px;
+#stream-nav .nav-wrap {
+  padding-top: 25px;
+  padding-bottom: 5px;
+  border-top: 1px $base solid;
+  font-family: $sans;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 300;
+
+  @media #{$break-sm} {
+    font-size: 18px;
+    line-height: 21px;
+  }
   ul{
-    padding: 0 15px;
-    font-family: $sans;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 600;
+    padding: 0;
     float: none;
-    @media #{$break-sm} {
-      padding: 0;
-      font-size: 18px;
-      line-height: 21px;
-    }
   }
   li{
-    margin-right: 8px;
-    margin-bottom: 10px;
+    margin-right: 15px;
     list-style-type: none;
     display: inline-block;
     @media #{$break-sm} {
-      margin-right: 10px;
-      margin-bottom: 12px;
+      margin-right: 40px;
     }
   }
   a{
-    padding: 3px 13px;
-    border-radius: 15px;
-    color:$white;
+    padding: 3px 0;
     @media #{$break-sm} {
-      padding: 5px 15px;
+      padding: 5px 0;
     }
+  }
+  a:hover{
+    padding: 5px 0 4px 0;
+    background: none;
+    border-bottom: 1px $base solid;
+  }
+  a:first-child {
+    padding-left: 0;
   }
 }
 
