--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import "components/_entry";      // Header — home
 @import "components/_album";      // Header — home
 @import "components/_press";      // Header — home
+@import "components/_work";       // Header — home
 @import "components/_sharetools"; // Share Tools
 @import "components/_artbox";     // Share Tools
 @import "components/_svg";        // SVG
