--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5896,12 +5896,6 @@ section {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff9cf', endColorstr='#f7f7f7', GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */ }
 
-.home #page-overlay {
-  width: 100%;
-  height: 1000px;
-  position: absolute;
-  background-image: url("../img/ac.png"); }
-
 .highlight {
   background: yellow; }
 
@@ -5909,8 +5903,8 @@ section {
 #site-nav {
   margin: 42px 0;
   font-weight: 300;
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 30px;
+  line-height: 36px;
   height: 35px; }
   #site-nav li {
     display: inline-block; }
@@ -5921,6 +5915,10 @@ section {
     #site-nav li a:hover {
       border-bottom: 2px solid #041D2E;
       background: none; }
+
+.home #site-nav {
+  font-size: 36px;
+  line-height: 40px; }
 
 #stream-nav .nav-wrap {
   padding-top: 25px;
@@ -5989,6 +5987,12 @@ section {
     line-height: 42px; }
     #head h1 a {
       text-decoration: none; }
+  #head h2 {
+    margin: 15px 0;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 100;
+    font-family: "Lato", Helvetica, Arial, sans-serif; }
   #head #mc_embed_signup {
     font-family: "Lato", Helvetica, Arial, sans-serif; }
     #head #mc_embed_signup #mc-field-group {
@@ -6101,7 +6105,7 @@ section {
     line-height: 21px; }
   #album_list .album_covers {
     width: 900px;
-    left: -300px;
+    left: -277px;
     position: relative; }
     #album_list .album_covers .cover {
       display: inline-block;
