--- a/assets/scss/components/_head.scss
+++ b/assets/scss/components/_head.scss
@@ -16,6 +16,15 @@
     }
   }
 
+  h2{
+    margin: 15px 0;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 100;
+    font-family: $sans;
+  }
+
+
   // Newsletter Signup
 
   #mc_embed_signup{
