--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6015,27 +6015,6 @@ header {
   font-size: 21px;
   line-height: 28px; }
 
-.album h1.title {
-  font-size: 36px;
-  font-weight: 300;
-  line-height: 49px; }
-.album .album_release_year {
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  font-size: 16px; }
-.album .album_summary {
-  margin: 15px 0;
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  font-size: 21px;
-  line-height: 28px; }
-.album .album_notes {
-  margin: 15px 0;
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 21px; }
-
 #album_list {
   padding: 30px 0; }
   #album_list .album_feature h4 {
@@ -6106,6 +6085,27 @@ header {
         line-height: 21px;
         font-weight: 600;
         font-style: italic; }
+
+.work h1.title {
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 49px; }
+.work .project_release_year {
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 16px; }
+.work .project_summary {
+  margin: 15px 0;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 21px;
+  line-height: 28px; }
+.work .project_notes {
+  margin: 15px 0;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 21px; }
 
 article.work {
   padding: 40px 0; }
