--- a/assets/scss/components/_work.scss
+++ b/assets/scss/components/_work.scss
@@ -8,7 +8,7 @@
   .project_release_year{
     font-family: $sans;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .project_summary{
@@ -18,6 +18,11 @@
     font-size: 21px;
     line-height: 28px;
   }
+  .project_links{
+    font-family: $sans;
+    font-weight: 500;
+    font-size: 16px;
+  }
 
   .project_notes{
     margin: 15px 0;
@@ -25,6 +30,26 @@
     font-weight: 300;
     font-size: 16px;
     line-height: 21px;
+  }
+  .buy-buttons{
+    margin: 30px 0;
+  }
+
+  .project-text{
+    margin: 50px 0;
+    border-top: 1px $base solid;
+    font-family: $sans;
+    font-weight: 300;
+    font-size: 21px;
+    line-height: 28px;
+
+    h4{
+      font-weight: 500;
+      margin-bottom: 25px;
+    }
+  }
+  .project-text * {
+    margin-bottom: 20px;
   }
 }
 
